Coreection par rapport à la base de donnée